Crash in new outliner show parenting hierarchy #63869

Closed
opened 2019-04-24 22:07:57 +02:00 by MACHIN3 · 12 comments

System Information
Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67

Blender Version
Broken: version: 2.80 (sub 59), branch: master, commit date: 2019-04-24 17:11, hash: a14735d11d
Worked: f2dc78f13f

Short description of error
The latest build crashes immediately, when loading the attached file. It works fine with yesterdays build.

Exact steps for others to reproduce the error

  • load the file

crash_when_loading.blend

**System Information** Operating system: Linux-4.13.10-041310-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.67 **Blender Version** Broken: version: 2.80 (sub 59), branch: master, commit date: 2019-04-24 17:11, hash: `a14735d11d` Worked: f2dc78f13f **Short description of error** The latest build crashes immediately, when loading the attached file. It works fine with yesterdays build. **Exact steps for others to reproduce the error** * load the file [crash_when_loading.blend](https://archive.blender.org/developer/F6973442/crash_when_loading.blend)
Author

Added subscriber: @MACHIN3

Added subscriber: @MACHIN3

Added subscriber: @brecht

Added subscriber: @brecht
Dalai Felinto was assigned by Brecht Van Lommel 2019-04-24 23:02:15 +02:00

Infinite recursion in outliner_make_object_parent_hierarchy_recursive.

Infinite recursion in `outliner_make_object_parent_hierarchy_recursive`.
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

I got the same error exactly once while testing, but was unable to recreate it. At the time I was playing with objects that had three levels of parenting (parent, son, grandson) and was moving them in various ways between two collections. But again, it only happened the once and I then spent about an hour trying to retrace my steps to make it happen again without success.

I got the same error exactly once while testing, but was unable to recreate it. At the time I was playing with objects that had three levels of parenting (parent, son, grandson) and was moving them in various ways between two collections. But again, it only happened the once and I then spent about an hour trying to retrace my steps to make it happen again without success.

This issue was referenced by d966c2f0c2

This issue was referenced by d966c2f0c2ad256adc70046b59b73004f5e21a7e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel changed title from attached file crashes immediately after loading to Crash in new outliner show parenting hierarchy 2019-04-25 00:26:03 +02:00

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I've disabled the new feature temporarily since a simple fix wasn't obvious and it seems likely this happens in a lot of files.

The problem is that it's iterating over te_parent->subtree, while at the same time removing elements from it as tree_to_remove_objects_from.

Further there is a linear lookup to find tree elements corresponding to a child object, which causes O(n^2) time complexity overall and so poor scaling for many objects in a collection.

The more efficient solution that also fixes the crash could be:

  • Build a map from Object* to a list of TreeElement* matching the object.
  • For all objects in the tree lookup the parent in this map, and move or add tree elements as needed.
I've disabled the new feature temporarily since a simple fix wasn't obvious and it seems likely this happens in a lot of files. The problem is that it's iterating over `te_parent->subtree`, while at the same time removing elements from it as `tree_to_remove_objects_from`. Further there is a linear lookup to find tree elements corresponding to a child object, which causes O(n^2) time complexity overall and so poor scaling for many objects in a collection. The more efficient solution that also fixes the crash could be: * Build a map from Object* to a list of TreeElement* matching the object. * For all objects in the tree lookup the parent in this map, and move or add tree elements as needed.

I managed to reproduce the issue in a simple file as well:

outliner_parent_instance.blend

From factory startup:

  • Delete Collection (Delete hierarchy)
  • Add an object (e.g., Cube)
  • Add another object (e.g., Empty).
  • Parent the Cube to the Empty

Thanks for reverting the commit Brecht.

I managed to reproduce the issue in a simple file as well: [outliner_parent_instance.blend](https://archive.blender.org/developer/F6974060/outliner_parent_instance.blend) From factory startup: * Delete Collection (Delete hierarchy) * Add an object (e.g., Cube) * Add another object (e.g., Empty). * Parent the Cube to the Empty Thanks for reverting the commit Brecht.

This issue was referenced by edff789292

This issue was referenced by edff78929276753b32e8df060d3f5f2755631288

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63869
No description provided.