Fix T63869: disable outliner show parent hierarchy temporarily

This is likely to cause crashes in many file, so disable this feature until
it is fixed.